--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "build": "react-native eject",
+    "start:ios": "react-native run-ios"
   },
   "dependencies": {
     "react": "16.3.1",
@@ -14,6 +16,7 @@
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.0.1",
+    "npm-run-all": "^4.1.3",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
